<resources>
    <string name="app_name">Posologia</string>

    <string name="action_exit">Sair</string>
    <string name="action_medicamento">Novo Medicamento</string>
    <string name="action_pessoa">Nova Pessoa</string>
    <string name="action_posologia">Nova Posologia</string>

    <string name="app_title_medicamento_new">Cadastro de Medicamento</string>
    <string name="app_title_pessoa">Entrar</string>
    <string name="app_title_pessoa_new">Cadastro de Usuário</string>
    <string name="app_title_posologia_new">Cadastro de Posologia</string>
    <string name="app_title_mapas">Mapa Posologia</string>
    <string name="app_title_home">Posologia - Controle seus Medicamentos</string>
    <string name="app_title_tablet">Posologia - Controle seus Medicamentos - TABLET</string>
    <string name="app_title_tablet_simples">Posologia - TABLET</string>

    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_medicamentos">Medicamentos</string>
    <string name="btn_pessoas">Pessoas</string>
    <string name="btn_posologias">Posologias</string>
    <string name="btn_tenhoconta">Eu tenho uma conta</string>
    <string name="btn_queroconta">Quero me Cadastrar</string>

    <string name="hint_filtro">Informe o filtro</string>

    <!--string name="home_body">Esse aplicativo lhe auxiliará com os medicamentos e posologias que precisar administrar, podendo criar vários perfis.</string-->
    <string name="home_header">Seja bem-vindo!</string>

    <string name="lbl_atencao">Atenção</string>
    <string name="lbl_data_nascimento">Data de Nascimento</string>
    <string name="lbl_data_registro">Data de Registro</string>
    <string name="lbl_descricao">Descrição</string>
    <string name="lbl_dosagem">Dosagem</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_erro">Erro</string>
    <string name="lbl_erro_salvar">Erro ao Salvar os Dados</string>
    <string name="lbl_erro_excluir">Erro ao Excluir os Dados</string>
    <string name="lbl_erro_criar_base">Erro ao criar o banco de dados</string>
    <string name="lbl_erro_conexao">Erro ao conectar ao banco de dados</string>
    <string name="lbl_excluir">Excluir</string>
    <string name="lbl_genero">Gênero</string>
    <string name="lbl_horario">Horário</string>
    <string name="lbl_medicamento">Medicamento</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_nome_requerido">Informe o Nome</string>
    <string name="lbl_observacao">Observações</string>
    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_foto">Tirar Foto</string>
    <string name="lbl_mg">mg</string>
    <string name="lbl_vezes_dia">Vezes ao Dia</string>
    <string name="lbl_de">De:</string>
    <string name="lbl_sql">Error do SQL</string>
    <string name="lbl_antibioticos">Antibióticos</string>
    <string name="lbl_antiinflamatorio">AntiInflamatorio</string>
    <string name="lbl_analgesico">Analgésico</string>
    <string name="lbl_outros">Outros</string>

    <string name="tempo_de_medicacao">Tempo Medicação</string>
    <string name="vezes_ao_dia">Vezes ao Dia</string>
    <string name="dosagem">Dosagem</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>

    <string name="miligrama">Miligrama</string>
    <string name="observacoes">Observações</string>
    <string name="salvar_medicamento">Salvar</string>
    <string name="excluir_medicamento">Excluir</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="erro_lista_medicamento">Error no click da lista Medicamento</string>
    <string name="erro_lista_posologia">Error no click da Lista Posologia</string>

    <string name="titulo_lista_endereco">Selecione o destino</string>
    <string name="msg_buscar">Buscando endereço...</string>
    <string name="erro_gps">É necessário habilitar a configuração de localização para utilizar o aplicativo.</string>

    <string name="nome_medicamento_erro">Informe o Nome do Medicamento</string>
    <string name="nome_miligrama_erro">Informe o Miligrama</string>
    <string name="nome_medicamento_maior">Informe um Nome maior que 3 letras</string>
    <string name="nome_miligrama_maior">Informe o Miligrama com 1 Numeros ou mais</string>
    <string name="nome_medicamento">Nome</string>
    <string name="verifica_exclusao">Deseja Realmente Excluir ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="alterar">Alterar</string>
    <string name="lbl_Foto">Tirar Foto</string>
    <string name="lbl_Observacao">Comentários</string>
    <string name="home_body">Este aplicativo irá ajudá-lo com os medicamentos e doses que você precisa administrar, e você pode criar vários perfis.</string>

    <string name="adapter_medicamentos">MEDICAMENTOS</string>
    <string name="adapter_horario">HORÁRIOS</string>
    <string name="hora_02">02 em 02 Horas</string>
    <string name="hora_04">04 em 04 Horas</string>
    <string name="hora_06">06 em 06 Horas</string>
    <string name="hora_08">08 em 08 Horas</string>
    <string name="hora_12">12 em 12 Horas</string>
    <string name="dias">Dias</string>
    <string name="meses">Meses</string>
    <string name="anos">Anos</string>
    <string name="gotas">Gotas</string>
    <string name="comprimidos">Comprimidos</string>
    <string name="ml">ML</string>
    <string name="nome_medicacao_erro">Informe o Tempo de Medicação</string>
    <string name="nome_dosagem_erro">Informe a Dosagem do Medicamento</string>
    <string name="nome_quantidade_erro">Informe Quantidade vezes ao dia</string>
    <string name="aguarde">Aguarde...</string>
    <string name="cadastro_usuario">Cadastrando usuário.</string>
    <string name="cadastro_sucesso">, cadastrado com Sucesso.</string>
    <string name="verifica_conexao">Verifique sua conexão com a Internet.</string>
    <string name="nome_usuario_maior">Informe um nome com mais de 3 letras</string>
    <string name="senha_usuario">Informe uma senha</string>
    <string name="senha_usuario_maior">Informe uma senha com mais de 3 digitos</string>
    <string name="email_usuario">Informe um e-mail</string>
    <string name="email_usuario_invalido">Informe um e-mail valido</string>
    <string name="verifica_usuario">Verificando conta.</string>
    <string name="usuario_incorreto">E-mail e/ou Senha incorreta.</string>
    <string name="ola">Olá,</string>
    <string name="localizacao_erro">Localização não encontrada, por favor tente novamente!</string>
    <string name="endereco_encontrado">Endereço encontrado com sucesso!</string>
    <string name="latitude">lat:</string>
    <string name="longitude">long:</string>
    <string name="endereco">Endereço encontrado</string>
    <string name="seu_local">Seu local</string>
    <string name="gps">GPS</string>
    <string name="gps_configurar">GPS não está habilitado. Deseja configurar?</string>
    <string name="configurar">Configurar</string>
    <string name="cancelar">Cancelar</string>
    <string name="endereco_erro">Não foi possivel localizar seu endereço, tente novamente!</string>
</resources>