<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:background="@drawable/background_entrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.android.posologia.view.LoginActivity">

    <ImageView
        android:id="@+id/topImageLogin"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="129dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/header_entrar" />

    <ImageView
        android:id="@+id/logotipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/medicamentos_color_transparente"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnCadastrarLogin"
        android:layout_width="350dp"
        android:layout_marginLeft="17dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_queroconta"
        android:background="#FFF"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:textColor="#0088AD"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:background="@drawable/button_entrar"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:textColor="#FFF"
        android:text="@string/btn_entrar"
        android:layout_above="@+id/btnCadastrarLogin"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/title_entrar" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lbl_nome"
        android:textColor="#000"
        android:background="#FFF"
        android:padding="15dp"
        android:textSize="16dp"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/logotipo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/lbl_senha"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#000"
        android:background="#FFF"
        android:textSize="16dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

</RelativeLayout>