<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_medicamento_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="br.com.android.posologia.view.MedicamentoNewActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bg_medicamento"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivMedicamento"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_image"
        android:layout_marginTop="15dp"
        android:src="@drawable/medical_pot_pills" />

    <EditText
        android:id="@+id/edtNomeMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivMedicamento"
        android:ems="10"
        android:hint="@string/nome_medicamento"
        android:inputType="textCapSentences"

        android:background="@drawable/textview_top"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/edtMiligrama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/miligrama"

        android:background="@drawable/textview_middle"
        android:layout_marginTop="1.5dp"
        android:layout_marginRight="30dp"
        android:textSize="17dp"
        android:layout_below="@+id/edtNomeMedicamento"
        android:layout_alignStart="@+id/edtNomeMedicamento" />

    <EditText
        android:id="@+id/edtObservacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtMiligrama"
        android:layout_below="@+id/edtMiligrama"
        android:ems="10"
        android:hint="@string/observacoes"
        android:inputType="textCapSentences"

        android:background="@drawable/textview_bottom"
        android:layout_marginTop="1.5dp"
        android:layout_marginRight="30dp"
        android:textSize="17dp"
        android:layout_centerVertical="true"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtNomeMedicamento"
        android:layout_alignTop="@+id/edtNomeMedicamento"
        android:layout_marginStart="11dp"
        app:srcCompat="@drawable/point" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/point"
        android:layout_above="@+id/edtObservacoes"
        android:layout_alignStart="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView10"
        android:layout_below="@+id/edtMiligrama"
        app:srcCompat="@drawable/point" />

    <Spinner
        android:id="@+id/spTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtObservacoes"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/btSalvarMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="16dp"
        android:text="@string/salvar_medicamento"
        android:layout_marginBottom="14dp"
        android:background="@drawable/button_entrar_index"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/spTipo" />

    <Button
        android:id="@+id/btExcluirMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btSalvarMedicamento"
        android:layout_alignBottom="@+id/btSalvarMedicamento"
        android:layout_alignStart="@+id/spTipo"
        android:background="@drawable/button_excluir"
        android:text="@string/excluir_medicamento"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="16dp"
        android:visibility="invisible" />
</RelativeLayout>
